# mouseful

./: .gitignore  BUGS.md  README.md  mouseful.cabal  mouseless.cabal
app/: Main.hs
cbits/: mouseful_macos.h  mouseful_macos.m  mouseless_macos.h  mouseless_macos.m
src/Mouseful/: App.hs
src/Mouseful/Core/: Charset.hs  Commands.hs  Geometry.hs  Grid.hs  Input.hs  State.hs
src/Mouseful/Platform/: Class.hs  MacOS.hs  Mock.hs
src/Mouseful/Platform/MacOS/: FFI.hs
src/Mouseless/: App.hs
src/Mouseless/Core/: Charset.hs  Commands.hs  Geometry.hs  Grid.hs  Input.hs  State.hs
src/Mouseless/Platform/: Class.hs  MacOS.hs  Mock.hs
src/Mouseless/Platform/MacOS/: FFI.hs
test/: Harness.hs  Spec.hs
