cabal-version: 3.0
name:          mouseful
version:       0.1.0.0
synopsis:      Keyboard-driven mouse control with grid overlay
description:
  Mouseful PC control: activate a labeled grid overlay, select targets by
  key combos, and move the cursor with keyboard-only commands.
category:      System
license:       MIT
author:        qdanov
maintainer:    qdanov
build-type:    Simple

library
  exposed-modules:
      Mouseful.App
      Mouseful.Core.Charset
      Mouseful.Core.Commands
      Mouseful.Core.Geometry
      Mouseful.Core.Grid
      Mouseful.Core.Input
      Mouseful.Core.State
      Mouseful.Platform.Class
      Mouseful.Platform.Mock
      Mouseful.Platform.MacOS
  other-modules:
      Mouseful.Platform.MacOS.FFI
  hs-source-dirs: src
  default-language: Haskell2010
  ghc-options:
    -Wall
    -Wcompat
    -Widentities
    -Wincomplete-record-updates
    -Wincomplete-uni-patterns
    -Wpartial-fields
    -Wredundant-constraints
  build-depends:
      base >= 4.18 && < 5
    , containers
    , mtl
    , stm
    , text
  if os(darwin)
    include-dirs: cbits
    cxx-sources:  cbits/mouseful_macos.m
    ghc-options:
      -optl-Wl,-framework,Cocoa
      -optl-Wl,-framework,Carbon
      -optl-Wl,-framework,CoreGraphics
      -optl-Wl,-framework,ApplicationServices

executable mouseful
  main-is:          Main.hs
  hs-source-dirs:   app
  default-language: Haskell2010
  ghc-options:      -threaded -rtsopts -with-rtsopts=-N
  build-depends:
      base
    , containers
    , mtl
    , mouseful
    , text
  if os(darwin)
    ghc-options:
      -optl-Wl,-framework,Cocoa
      -optl-Wl,-framework,Carbon
      -optl-Wl,-framework,CoreGraphics
      -optl-Wl,-framework,ApplicationServices

test-suite mouseful-test
  type:             exitcode-stdio-1.0
  main-is:          Spec.hs
  other-modules:    Harness
  hs-source-dirs:   test
  default-language: Haskell2010
  build-depends:
      base
    , containers
    , hspec
    , mouseful
    , mtl
    , text
  if os(darwin)
    ghc-options:
      -optl-Wl,-framework,Cocoa
      -optl-Wl,-framework,Carbon
      -optl-Wl,-framework,CoreGraphics
      -optl-Wl,-framework,ApplicationServices